--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,7 +2,7 @@
   <section>
     <form method="POST" action="https://api.slapform.com/{{site.email}}">
       <div class="field">
-        <label for="name">Name</label>
+        <label for="name">Nom</label>
         <input type="text" name="name" id="name" />
       </div>
       <div class="field">
@@ -21,11 +21,11 @@
   </section>
   <section class="split contact">
     <section class="alt">
-      <h3>Location</h3>
+      <h3>Localisation</h3>
       <p>{{site.location}}</p>
     </section>
     <section>
-      <h3>Phone</h3>
+      <h3>Téléphone</h3>
       <p><a href="tel:{{site.phone}}">{{site.phone}}</a></p>
     </section>
     <section>
@@ -35,9 +35,10 @@
     <section>
       <h3>Social</h3>
       <ul class="icons alt">
-        <li><a href="https://twitter.com/{{site.twitter}}" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
+        <!-- <li><a href="https://twitter.com/{{site.twitter}}" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
         <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
-        <li><a href="https://instagram.com/{{site.instagram}}" class="icon fa-instagram" rel="nofollow"><span class="label">Instagram</span></a></li>
+        <li><a href="https://instagram.com/{{site.instagram}}" class="icon fa-instagram" rel="nofollow"><span class="label">Instagram</span></a></li> -->
+        <li><a href="https://www.linkedin.com/in/{{site.linkedin}}" class="icon fa-linkedin" rel="nofollow"><span class="label">LinkedIn</span></a></li>
         <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
       </ul>
     </section>
@@ -45,5 +46,5 @@
 </footer>
 <!-- Copyright -->
 <div id="copyright">
-  <ul><li>&copy; HTML5 UP</li><li>Design by <a href="https://html5up.net" rel="nofollow">HTML5 UP</a></li><li>Jekyll Integration by <a href="https://slapform.com">Slapform</a> </li></ul>
+  <ul><li>Copyright &copy; 2021 Mathieu Bolteau</li><li>Design by <a href="https://html5up.net" rel="nofollow">HTML5 UP</a></li><li>Jekyll Integration by <a href="https://slapform.com">Slapform</a> </li></ul>
 </div>
